tests/verifier/fail/test3.ial
function void foo()
{
    register int64 x;

    block entry
    {
        return x;
    }
}
